# itia_fourbythree_driver

./: ControllerInstallAndUserGuide_v3.odt  README.md
force_monitor/: CMakeLists.txt  package.xml  plugin.xml
force_monitor/include/force_monitor/: force_monitor.h
force_monitor/src/force_monitor/: force_monitor.cpp
fourbythree_description/: CMakeLists.txt  fourbythree_description.kdev4  package.xml
fourbythree_description/.kdev4/: fourbythree_description.kdev4
fourbythree_description/cfg/: 4by3_filter_info.yaml  4by3_prototype2_filter_info.yaml  4by3_prototype3_filter_info.yaml  4by3_prototype4_filter_info.yaml  elastic_robot_2dof_additional_info.yaml  rigid_4by3_additional_info.yaml  rigid_4by3_additional_info_par_calib.yaml  rigid_4by3_prototype2_additional_info.yaml  rigid_4by3_prototype3_additional_info.yaml  rigid_4by3_prototype3_additional_info_par_calib.yaml  rigid_4by3_prototype3_additional_info_par_calib_link.yaml  rigid_4by3_prototype3_additional_info_par_calib_motor.yaml  rigid_4by3_prototype4_additional_info_par_calib.yaml  rigid_4by3_prototype4_additional_info_par_calib_link.yaml  rigid_4by3_prototype4_additional_info_par_calib_motor.yaml  rigid_4by3_prototype5_additional_info.yaml  rigid_4by3_prototype5_additional_info_par_calib_motor.yaml
fourbythree_description/launch/: fourbythree_cal_test.launch  prototype2_upload.launch  prototype3_load_urdf.launch  prototype3_upload.launch  prototype4_upload.launch  ur10_upload.launch
fourbythree_description/meshes/: prototype2_base.stl  prototype2_link_1.stl  prototype2_link_2.stl  prototype2_link_3.stl  prototype2_link_4.stl  prototype2_link_5.stl  prototype4_base.stl  prototype4_flange.stl  prototype4_link1.stl  prototype4_link2.stl  prototype4_link3.stl  prototype4_link4.stl  prototype4_link5.stl
fourbythree_description/meshes/end_effector/: camera_support.stl  pluto10.stl  pluto10_support.stl  tool_adapter.stl
fourbythree_description/rviz/: calibration.rviz
fourbythree_description/sdf/: elastic_2dof.sdf  prototype3.sdf
fourbythree_description/urdf/: dh_link.urdf.xacro  fourbythree_urdf_template.urdf.xacro  prototype2.urdf  prototype3.urdf  prototype3_par_calib.urdf  prototype3_par_calib_gazebo.urdf  prototype3_par_calib_link.urdf  prototype3_par_calib_motor.urdf  prototype3_par_calib_motor.urdf.0  prototype3_par_calib_motor.urdf.2  prototype4_cameras_screw_driver.urdf  prototype4_par_calib.urdf  prototype4_par_calib_link.urdf  prototype4_par_calib_motor.urdf  prototype5.urdf  prototype5_par_calib_link.urdf  prototype6_par_calib.urdf  prototype6_par_calib_motor.urdf
fourbythree_ros_controller/: CMakeLists.txt  fourbythree_ros_controller.kdev4  package.xml
fourbythree_ros_controller/config/configurations/UR10/: controllers.yaml  starting_configuration.yaml  (+6 more)
fourbythree_ros_controller/config/robots/: README  motor_joint_limits.yaml
fourbythree_ros_controller/include/fourbythree_ros_controller/: fourbythree_controller_manager.h  fourbythree_driver_manager.h
fourbythree_ros_controller/launch/: fourbythree_handheld.launch  fourbythree_nodelet_manager.launch  gain_scheduling.launch  load_hardware_interface.launch  load_single_hardware_interface.launch  start_complete_layer.launch  start_controller.launch  start_hardware_interface.launch  start_ur_complete_layer.launch  start_ur_controller.launch  static_transform.launch  unload_hardware_interface.launch  ur10_ros_control.launch
fourbythree_ros_controller/perspective/: robot_runtime_monitor.perspective
fourbythree_ros_controller/src/: fourbythree_controller_manager.cpp  fourbythree_controller_manager.cpp.0  fourbythree_start_gui.cpp  gain_scheduling.cpp  tekniker_itia_wrapper_node.cpp
fourbythree_ros_controller/src/fourbythree_ros_controller/: fourbythree_controller_manager.cpp  fourbythree_driver_manager.cpp
fourbythree_test/: CMakeLists.txt  fourbythree_test_plugins.xml  package.xml
fourbythree_test/cfg/: binary_logger_cfg.yaml  binary_logger_fourbythree_test.yaml  calibration_positions.yaml  defl_multisine.yaml  defl_multisine_jnt1.yaml  low_freq.yaml  motor_predefined_position.yaml  motor_predefined_position_old.yaml  multisine.yaml  position_test.yaml  predefined_position.yaml  predefined_position.yaml.0  torque_multisine.yaml  torque_multisine_2.yaml  torque_multisine_joint1.yaml  torque_multisine_joint2.yaml  torque_multisine_joint3.yaml  torque_multisine_low_freq.yaml  trj_stage1.yaml
fourbythree_test/include/fourbythree_test/: feedforward_action.h  multisine_nodelet.h
fourbythree_test/launch/: binary_logger.launch  compute_inertia.launch  execute_motor_trj.launch  execute_trj.launch  kinematic_calibration.launch  test.launch  test_defl_multisine_jnt1.launch  test_defl_multisine_jnt2.launch  test_deflection_multisine.launch  test_multisine.launch  test_multisine_jnt1.launch  test_multisine_jnt2.launch  test_multisine_jnt3.launch
fourbythree_test/scripts/: analysisData.m  generate_multisine_signal.m  generate_multisine_signal.m.0
fourbythree_test/scripts/torque_multisine/: P1.mat  home.mat  multisine_jnt2.mat  multisine_jnt2_P2.mat  multisine_jnt2_P4.mat  multisine_jnt2_vert.mat  multisize_6dof.m  plot_results.m  taratura_controllo.m  test_defl_multisine.m  test_joint1.m  test_multisine.m  test_torque_multisine.mat  tmp.m  torque_multisine.yaml
fourbythree_test/src/: log_to_binary.cpp  low_frequency_filter_test.cpp  test_multisine.cpp  trj_test.cpp
fourbythree_test/src/fourbythree_test/: feedforward_action.cpp  multisine_nodelet.cpp
ndlcom_driver/: CMakeLists.txt  ndlcom_driver.kdev4  ndlcom_nodelet_plugins.xml  package.xml
ndlcom_driver/.kdev4/: ndlcom_driver.kdev4
ndlcom_driver/cfg/: ndlcom_configuration.yaml
ndlcom_driver/include/ndlcom_driver/: ndlcom_nodelet.h  ndlcom_nodelet_fake.h  ndlcom_utils.h  serial_communication.h
ndlcom_driver/registers/Prototype3/: joint1  joint2
ndlcom_driver/src/: .kdev_include_paths
ndlcom_driver/src/ndlcom_driver/: ndlcom_nodelet.cpp  ndlcom_nodelet_fake.cpp  ndlcom_threads.cpp  ndlcom_utils.cpp  serial_communication.c  serial_communication.cpp
ur10_moveit/: package.xml
(+274 files in other folders)
